samples/_failures_safe/1760884777_a2791a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_14d32cd5.c: In function ‘main’:
./samples/SAFE/__tmp_14d32cd5.c:143:5: error: expected expression at end of input
  143 |     add_edge(&g, 4,
      |     ^~~~~~~~
./samples/SAFE/__tmp_14d32cd5.c:143:5: error: too few arguments to function ‘add_edge’
./samples/SAFE/__tmp_14d32cd5.c:30:6: note: declared here
   30 | void add_edge(struct Graph *g, int u, int v, int weight) {
      |      ^~~~~~~~
./samples/SAFE/__tmp_14d32cd5.c:143:5: error: expected declaration or statement at end of input
  143 |     add_edge(&g, 4,
      |     ^~~~~~~~
